# store-watcher

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Product-Variation.json  README.md  agents.md  docker-compose.yml  pyproject.toml  seen_items.json  state.db  watch_store.py
.github/workflows/: ci.yml
docker/: build-push-action
src/store_watcher/: auth.py  cli.py  config_sqlite.py  core.py  notify.py  state.py  state_sqlite.py  ui.py  utils.py
src/store_watcher/adapters/: base.py  disneystore.py  sfcc.py
src/store_watcher/db/: __init__.py  config.py  items.py  users.py  utils.py
src/store_watcher/ui/: core.py  helpers.py  renderers.py  routes_admin.py  routes_auth.py  routes_main.py
tests/: test_cli_watch.py  test_config_db.py  test_disneystore_adapter.py  test_items_db.py  test_notify_render  test_notify_render.py  test_sfcc_variation.py  test_state.py  test_users_db.py  test_utils.py
